Completed solutions for all problems

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After simulating 10,000 comparisons of a random woman to a random man, the probability that any given woman is taller than any given man is 0.2205.\n"
+      "After simulating 10,000 comparisons of a random woman to a random man, the probability that any given woman is taller than any given man is 0.2126.\n"
      ]
     }
    ],
@@ -397,10 +397,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_trials = 10000\n",
+    "n_students = 50\n",
+    "p_fail = 1/250\n",
+    "\n",
+    "installs = np.random.random((n_trials,n_students))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, ..., False,  True, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       ...,\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "install_failure = installs < 0.004\n",
+    "install_failure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False, ...,  True, False,  True])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(install_failure.sum(axis=1) >= 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After running 10,000 simulations, the probability that there are no failures in a group of 50 students: 0.8148\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"After running 10,000 simulations, the probability that there are no failures in a group of 50 students: {1-(install_failure.sum(axis=1)>=1).mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After running 10,000 simulations, the probability that there are no failures in a group of 100 students: 0.6672\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_students = 100\n",
+    "installs = np.random.random((n_trials,n_students))\n",
+    "install_failure = installs < 0.004\n",
+    "print(f\"After running 10,000 simulations, the probability that there are no failures in a group of 100 students: {1-(install_failure.sum(axis=1)>=1).mean()}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,10 +501,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After running 10,000 simulations, the probability that there are no failures in a group of 150 students: 0.5463\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_students = 150\n",
+    "installs = np.random.random((n_trials,n_students))\n",
+    "install_failure = installs < 0.004\n",
+    "print(f\"After running 10,000 simulations, the probability that there are no failures in a group of 150 students: {1-(install_failure.sum(axis=1)>=1).mean()}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,10 +528,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After running 10,000 simulations, the probability that there are no failures in a group of 450 students: 0.16879999999999995\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_students = 450\n",
+    "installs = np.random.random((n_trials,n_students))\n",
+    "install_failure = installs < 0.004\n",
+    "print(f\"After running 10,000 simulations, the probability that there are no failures in a group of 450 students: {1-(install_failure.sum(axis=1)>=1).mean()}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -439,10 +555,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.85769224, 0.80032733, 0.71057881],\n",
+       "       [0.49072275, 0.20748525, 0.43164126],\n",
+       "       [0.9754546 , 0.48757196, 0.68411212],\n",
+       "       ...,\n",
+       "       [0.72868148, 0.43491399, 0.25175779],\n",
+       "       [0.95673347, 0.83199687, 0.67132019],\n",
+       "       [0.97338735, 0.03091319, 0.48831878]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_food = .70\n",
+    "n_trials = 10000\n",
+    "n_days = 3\n",
+    "\n",
+    "food_truck = np.random.random((n_trials, n_days))\n",
+    "food_truck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False],\n",
+       "       [ True,  True,  True],\n",
+       "       [False,  True,  True],\n",
+       "       ...,\n",
+       "       [False,  True,  True],\n",
+       "       [False, False,  True],\n",
+       "       [False,  True,  True]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_truck_present = food_truck < p_food\n",
+    "food_truck_present"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False, ..., False, False, False])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(food_truck_present.sum(axis=1) == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0278"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_food_3_days = (food_truck_present.sum(axis=1) == 0).mean()\n",
+    "no_food_3_days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After 10,000 simulations, the probability that there would be no food truck for all 3 days: 0.0278\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"After 10,000 simulations, the probability that there would be no food truck for all 3 days: {no_food_3_days}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -453,24 +678,314 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.82362966, 0.48518064, 0.59832284, ..., 0.36197704, 0.35796501,\n",
+       "        0.21457426],\n",
+       "       [0.67455267, 0.32256746, 0.93606459, ..., 0.2946364 , 0.48016794,\n",
+       "        0.92708789],\n",
+       "       [0.84056316, 0.21086955, 0.17370007, ..., 0.81261892, 0.52686485,\n",
+       "        0.01686217],\n",
+       "       ...,\n",
+       "       [0.94971857, 0.44650045, 0.80551779, ..., 0.76847661, 0.10800821,\n",
+       "        0.42607581],\n",
+       "       [0.65066617, 0.76981336, 0.06679755, ..., 0.95101963, 0.94136017,\n",
+       "        0.69983771],\n",
+       "       [0.56952336, 0.18027006, 0.82738404, ..., 0.54219219, 0.03063603,\n",
+       "        0.83949336]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_food = .70\n",
+    "n_trials = 10000\n",
+    "n_days = 7\n",
+    "\n",
+    "food_truck = np.random.random((n_trials, n_days))\n",
+    "food_truck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True,  True, ...,  True,  True,  True],\n",
+       "       [ True,  True, False, ...,  True,  True, False],\n",
+       "       [False,  True,  True, ..., False,  True,  True],\n",
+       "       ...,\n",
+       "       [False,  True, False, ..., False,  True,  True],\n",
+       "       [ True, False,  True, ..., False, False,  True],\n",
+       "       [ True,  True, False, ...,  True,  True, False]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_truck_present = food_truck < p_food\n",
+    "food_truck_present"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True, ...,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(food_truck_present.sum(axis=1) >= 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9998"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "at_least_1_food_7_days = (food_truck_present.sum(axis=1) >= 1).mean()\n",
+    "at_least_1_food_7_days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that there will be at least one food truck present at some point during any given week: 0.9998\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The probability that there will be at least one food truck present at some point during any given week: {at_least_1_food_7_days}\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### If 23 people are in the same room, what are the odds that two of them share a birthday? What if it's 20 people? 40?"
+    "### If 23 people are in the same room, what are the odds that two of them share a birthday?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 87, 165, 326, ..., 133, 256, 316],\n",
+       "       [ 63, 110, 176, ..., 304,   2,  80],\n",
+       "       [222, 232,  97, ..., 355, 152, 117],\n",
+       "       ...,\n",
+       "       [334, 115, 357, ..., 253,  37, 168],\n",
+       "       [127, 304, 102, ..., 352,  74, 130],\n",
+       "       [223, 291, 127, ...,  19, 120, 142]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "birthdays = list(range(1,366))\n",
+    "n_trials = 10_000\n",
+    "n_students = 23\n",
+    "\n",
+    "rooms = np.random.choice(birthdays,n_trials * n_students).reshape(n_trials, n_students)\n",
+    "rooms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on 10,000 simulations, in a room of 23 people, assuming perfectly equal distribution among birthdays, the probability that there is at least one shared birthday: 0.5055\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches = []\n",
+    "for room in rooms:\n",
+    "    if len(set(room)) != len(room):\n",
+    "        matches.append(1)\n",
+    "    else:\n",
+    "        matches.append(0)\n",
+    "        \n",
+    "percent_matches = sum(matches)/len(matches)\n",
+    "print(f\"Based on 10,000 simulations, in a room of 23 people, assuming perfectly equal distribution among birthdays, the probability that there is at least one shared birthday: {percent_matches}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What if it's 20 people? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[306, 195,  73, ..., 121,  97,  51],\n",
+       "       [ 42,  59, 210, ..., 167,  41, 157],\n",
+       "       [ 53, 117, 119, ..., 233, 231, 294],\n",
+       "       ...,\n",
+       "       [  5, 246, 350, ...,  45, 185, 275],\n",
+       "       [349, 310, 339, ..., 233,  29, 252],\n",
+       "       [354, 303, 289, ...,  62,  82, 316]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "birthdays = list(range(1,366))\n",
+    "n_trials = 10_000\n",
+    "n_students = 20\n",
+    "\n",
+    "rooms = np.random.choice(birthdays,n_trials * n_students).reshape(n_trials, n_students)\n",
+    "rooms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on 10,000 simulations, in a room of 20 people, assuming perfectly equal distribution among birthdays, the probability that there is at least one shared birthday: 0.411\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches = []\n",
+    "for room in rooms:\n",
+    "    if len(set(room)) != len(room):\n",
+    "        matches.append(1)\n",
+    "    else:\n",
+    "        matches.append(0)\n",
+    "        \n",
+    "percent_matches = sum(matches)/len(matches)\n",
+    "print(f\"Based on 10,000 simulations, in a room of 20 people, assuming perfectly equal distribution among birthdays, the probability that there is at least one shared birthday: {percent_matches}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 40?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 66, 107,  97, ..., 324, 115,  53],\n",
+       "       [144,  10, 148, ..., 100, 186,  81],\n",
+       "       [136,  15, 246, ..., 124, 178, 224],\n",
+       "       ...,\n",
+       "       [167, 267,  29, ..., 169, 186, 181],\n",
+       "       [351, 294, 228, ..., 281, 152, 106],\n",
+       "       [120,  59, 123, ..., 131, 257, 116]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "birthdays = list(range(1,366))\n",
+    "n_trials = 10_000\n",
+    "n_students = 40\n",
+    "\n",
+    "rooms = np.random.choice(birthdays,n_trials * n_students).reshape(n_trials, n_students)\n",
+    "rooms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on 10,000 simulations, in a room of 40 people, assuming perfectly equal distribution among birthdays, the probability that there is at least one shared birthday: 0.89\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches = []\n",
+    "for room in rooms:\n",
+    "    if len(set(room)) != len(room):\n",
+    "        matches.append(1)\n",
+    "    else:\n",
+    "        matches.append(0)\n",
+    "        \n",
+    "percent_matches = sum(matches)/len(matches)\n",
+    "print(f\"Based on 10,000 simulations, in a room of 40 people, assuming perfectly equal distribution among birthdays, the probability that there is at least one shared birthday: {percent_matches}\")"
+   ]
   }
  ],
  "metadata": {
