--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -779,7 +779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### SOLUTION ONE"
+    "#### SOLUTION ONE (+- 1.5 is a distinct and limiting range with equal distribution)"
    ]
   },
   {
@@ -832,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### SOLUTION TWO"
+    "#### SOLUTION TWO (+- 1.5 is the standard deviation of a normal distribution)"
    ]
   },
   {
